IPCBlobInputStream should call the callback immediately upon receiving AsyncWait if stream is closed
Categories
(Core :: DOM: File, defect, P2)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox79 | --- | fixed |
People
(Reporter: ssengupta, Assigned: ssengupta)
References
Details
Attachments
(2 files, 2 obsolete files)
Currently multiple implementations of nsIAsyncInputStream return an error code (e.g., NS_BASE_STREAM_CLOSED) and do not call the callback if AsyncWait is called and the stream is already closed, which is not expected behaviour. These implementations should be updated to call the callback immediately in such a situation instead of returning an error.
| Assignee | ||
Updated•5 years ago
|
| Assignee | ||
Updated•5 years ago
|
| Assignee | ||
Updated•5 years ago
|
| Assignee | ||
Comment 1•5 years ago
|
||
| Assignee | ||
Comment 2•5 years ago
|
||
Depends on D77407
| Assignee | ||
Comment 3•5 years ago
|
||
Depends on D77408
| Assignee | ||
Comment 4•5 years ago
|
||
| Assignee | ||
Updated•5 years ago
|
| Assignee | ||
Updated•5 years ago
|
Updated•5 years ago
|
Comment 5•5 years ago
|
||
Comment on attachment 9152681 [details]
Bug 1641825 - nsBufferedInputStream does not return error and executes callback on AsyncWait/AsyncLengthWait if stream is closed r=baku
Revision D77433 was moved to bug 1641825. Setting attachment 9152681 [details] to obsolete.
Comment 6•5 years ago
|
||
Comment on attachment 9152622 [details]
Bug 1637742 - P3 - PartiallySeekableInputStream does not return error and executes callback on AsyncWait/AsyncLengthWait if stream is closed r=baku
Revision D77409 was moved to bug 1641826. Setting attachment 9152622 [details] to obsolete.
Comment 9•5 years ago
|
||
| bugherder | ||
https://hg.mozilla.org/mozilla-central/rev/71080a3ec16c
https://hg.mozilla.org/mozilla-central/rev/2015a4db7084
Description
•