Bug 1637742 - P2 - IPCBlobInputStream does not return error and executes callback on AsyncWait/AsyncLengthWait if stream is closed r=baku

Depends on D77407

Differential Revision: https://phabricator.services.mozilla.com/D77408